force-app/main/default/objects/Premia__c/Premia__c.object-meta.xml
<CustomObject>
    <label>Premia</label>
    <nameField>
        <displayFormat>Premia-{000000000}</displayFormat>
        <label>Premia Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Premias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>