force-app/main/default/objects/Premia__c/fields/Gross_net_indicator__c.field-meta.xml
<CustomField>
    <fullName>Gross_net_indicator__c</fullName>
    <label>Gross/Net Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>