force-app/main/default/objects/Premia__c/fields/No_quotation_exists__c.field-meta.xml
<CustomField>
    <fullName>No_quotation_exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Quotation Exists</label>
    <type>Checkbox</type>
</CustomField>