force-app/main/default/objects/Premia__c/fields/Quotation_type__c.field-meta.xml
<CustomField>
    <fullName>Quotation_type__c</fullName>
    <label>Typ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>